basic info and charpters

--- a/ustcsetup.tex
+++ b/ustcsetup.tex
@@ -1,20 +1,20 @@
 % !TeX root = ./main.tex
 
 \ustcsetup{
-  title                = {中国科学技术大学\\学位论文模板示例文档 v\ustcthesisversion},
-  title*               = {An example of thesis template for University of Science
-                          and Technology of China v\ustcthesisversion},
-  author               = {李泽平},
-  author*              = {Li Zeping},
-  speciality           = {数学与应用数学},
-  speciality*          = {Mathematics and Applied Mathematics},
-  supervisor           = {XXX~教授, XXX~教授},
-  supervisor*          = {Prof. XXX, Prof. XXX},
+  title                = {基于量能器信息寻找 \\ 长寿命粒子的神经元网络},
+  title*               = {Application of Neural network technique in searches for 
+                          Long-lived particles with signatures in calorimeter},
+  author               = {叶飞瑞},
+  author*              = {Feirui Ye},
+  speciality           = {粒子物理与原子核物理},
+  speciality*          = {Particle Physics and Nuclear Physics},
+  supervisor           = {刘衍文~教授},
+  supervisor*          = {Prof. Yanwen Liu},
   % practice-supervisor  = {XXX~教授, XXX~教授},  % 专业/工程学位的实践导师
   % practice-supervisor* = {Prof. XXX, Prof. XXX},
   % date                 = {2017-05-01},  % 完成时间，默认为今日
-  % department           = {数学科学学院},  % 院系，本科生需要填写
-  % student-id           = {PB11001000},  % 学号，本科生需要填写
+  department           = {物理学院},  % 院系，本科生需要填写
+  student-id           = {PB21020514},  % 学号，本科生需要填写
   % secret-level         = {秘密},     % 绝密|机密|秘密|控阅，注释本行则公开
   % secret-level*        = {Secret},  % Top secret | Highly secret | Secret
   % secret-year          = {10},      % 保密/控阅期限
