--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 % !TeX program = xelatex
 % !TeX spellcheck = en_US
 
-\documentclass[degree=doctor]{ustcthesis}
+\documentclass[degree=bachelor]{ustcthesis}
 % degree      = doctor | master | bachelor
 % degree-type = academic | professional | engineering
 % language    = chinese | english
@@ -18,7 +18,7 @@
 \copyrightpage
 
 \frontmatter
-\input{chapters/innovations.tex}  % 博士学位论文的创新性说明
+% \input{chapters/innovations.tex}  % 博士学位论文的创新性说明
 \input{chapters/abstract.tex}
 \tableofcontents
 % \listoffigures
@@ -27,12 +27,14 @@
 % \input{chapters/notation.tex}
 
 \mainmatter
-\input{chapters/intro.tex}
-\input{chapters/floats.tex}
-\input{chapters/math.tex}
-\input{chapters/citations.tex}
+\input{chapters/introduction.tex}
+\input{chapters/LLP.tex}
+\input{chapters/detector.tex}
+\input{chapters/data.tex}
+\input{chapters/NN.tex}
+\input{chapters/result.tex}
 
-\bibliography{bib/ustc}  % 参考文献使用 BibTeX 编译
+% \bibliography{bib/ustc}  % 参考文献使用 BibTeX 编译
 % \printbibliography       % 参考文献使用 BibLaTeX 编译
 
 \appendix
@@ -40,6 +42,6 @@
 
 \backmatter
 \input{chapters/acknowledgements.tex}
-\input{chapters/achievements.tex}
+% \input{chapters/achievements.tex}
 
 \end{document}
