--- a/main.tex
+++ b/main.tex
@@ -34,7 +34,7 @@
 \input{chapters/NN.tex}
 \input{chapters/result.tex}
 
-% \bibliography{bib/ustc}  % 参考文献使用 BibTeX 编译
+\bibliography{bib/main}  % 参考文献使用 BibTeX 编译
 % \printbibliography       % 参考文献使用 BibLaTeX 编译
 
 \appendix
