--- a/main.tex
+++ b/main.tex
@@ -27,10 +27,10 @@
 % \include{chapters/notation}
 
 \mainmatter
-\include{chapters/intro}
-\include{chapters/floats}
-\include{chapters/math}
-\include{chapters/citations}
+% \include{chapters/intro}
+% \include{chapters/floats}
+% \include{chapters/math}
+% \include{chapters/citations}
 \include{chapters/introduction.tex}
 \include{chapters/LLP.tex}
 \include{chapters/detector.tex}
