LLP update, SUSY

--- a/bib/main.bib
+++ b/bib/main.bib
@@ -11,3 +11,43 @@
 	year      = {2022},
 	month     = jun
 }
+
+@book{QFT_Weinberg,
+	added-at    = {2009-06-11T11:33:08.000+0200},
+	asin        = {0521670535},
+	author      = {Weinberg, Steven},
+	biburl      = {https://www.bibsonomy.org/bibtex/2e52ce4bfd4a541de23835d5ab30cac2a/random3f},
+	description = {Amazon.com: The Quantum Theory of Fields, Volume 1: Foundations: Steven Weinberg: Books},
+	dewey       = {530.143},
+	ean         = {9780521670531},
+	interhash   = {f12d4e382d4eed1b7ff7b5151e9995eb},
+	intrahash   = {e52ce4bfd4a541de23835d5ab30cac2a},
+	isbn        = {0521670535},
+	keywords    = {books field physics qft quantum theory},
+	publisher   = {Cambridge University Press},
+	timestamp   = {2009-06-11T11:33:08.000+0200},
+	title       = {The Quantum Theory of Fields, Volume 1: Foundations},
+	url         = {http://www.amazon.com/Quantum-Theory-Fields-Foundations/dp/0521670535%3FSubscriptionId%3D13CT5CVB80YFWJEPWS02%26tag%3Dws%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0521670535},
+	year        = 2005
+}
+
+@techreport{SUSY_ATLAS,
+	author        = {{ATLAS collaboration}},
+	collaboration = {ATLAS},
+	title         = {{The quest to discover supersymmetry at the ATLAS
+	                 experiment}},
+	institution   = {CERN},
+	archiveprefix = {arXiv},
+	eprint        = {2403.02455},
+	reportnumber  = {CERN-EP-2024-056},
+	address       = {Geneva},
+	year          = {2024},
+	url           = {https://cds.cern.ch/record/2890693},
+	note          = {58 pages in total, author list starting page 41, 21
+	                 figures,
+	                 submitted to Physics Reports. All figures
+	                 including auxiliary figures are
+	                 available at
+	                 
+	                 http://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/PAPERS/SUSY-2023-10}
+}
