--- a/ustcsetup.tex
+++ b/ustcsetup.tex
@@ -2,8 +2,8 @@
 
 \ustcsetup{
   title                = {基于量能器信息寻找 \\ 长寿命粒子的神经元网络},
-  title*               = {Application of Neural network technique in searches for 
-                          Long-lived particles with signatures in calorimeter},
+  title*               = {Application of Neural network technique in searches for
+      Long-lived particles with signatures in calorimeter},
   author               = {叶飞瑞},
   author*              = {Feirui Ye},
   speciality           = {粒子物理与原子核物理},
@@ -51,6 +51,10 @@
 
 % SI 量和单位
 \usepackage{siunitx}
+
+\usepackage{physics}
+\usepackage{makecell}
+\usepackage{tabularx}
 
 % 参考文献使用 BibTeX + natbib 宏包
 % 顺序编码制
