LLP update, SUSY

--- a/bib/main.bib
+++ b/bib/main.bib
@@ -11,6 +11,15 @@
 	year      = {2022},
 	month     = jun
 }
+@misc{hidden_sector,
+	title         = {Higgs-field Portal into Hidden Sectors},
+	author        = {Brian Patt and Frank Wilczek},
+	year          = {2006},
+	eprint        = {hep-ph/0605188},
+	archiveprefix = {arXiv},
+	primaryclass  = {hep-ph},
+	url           = {https://arxiv.org/abs/hep-ph/0605188}
+}
 
 @book{QFT_Weinberg,
 	added-at    = {2009-06-11T11:33:08.000+0200},
@@ -29,6 +38,20 @@
 	title       = {The Quantum Theory of Fields, Volume 1: Foundations},
 	url         = {http://www.amazon.com/Quantum-Theory-Fields-Foundations/dp/0521670535%3FSubscriptionId%3D13CT5CVB80YFWJEPWS02%26tag%3Dws%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0521670535},
 	year        = 2005
+}
+
+@article{singlino,
+	title     = {The higgsino–singlino sector of the NMSSM: combined constraints from dark matter and the LHC},
+	volume    = {78},
+	issn      = {1434-6052},
+	url       = {http://dx.doi.org/10.1140/epjc/s10052-018-6204-3},
+	doi       = {10.1140/epjc/s10052-018-6204-3},
+	number    = {9},
+	journal   = {The European Physical Journal C},
+	publisher = {Springer Science and Business Media LLC},
+	author    = {Ellwanger, Ulrich and Hugonie, Cyril},
+	year      = {2018},
+	month     = sep
 }
 
 @techreport{SUSY_ATLAS,
