detector, inner detector

--- a/bib/main.bib
+++ b/bib/main.bib
@@ -1,3 +1,19 @@
+@article{ATLAS_detector,
+	author        = {Abbott, B. and others},
+	collaboration = {ATLAS IBL},
+	title         = {{Production and Integration of the ATLAS Insertable B-Layer}},
+	eprint        = {1803.00844},
+	archiveprefix = {arXiv},
+	primaryclass  = {physics.ins-det},
+	reportnumber  = {FERMILAB-PUB-18-826-V},
+	doi           = {10.1088/1748-0221/13/05/T05008},
+	journal       = {JINST},
+	volume        = {13},
+	number        = {05},
+	pages         = {T05008},
+	year          = {2018}
+}
+
 @article{calratio,
 	title     = {Search for neutral long-lived particles in pp collisions at $\sqrt{s}$ = 13 TeV that decay into displaced hadronic jets in the ATLAS calorimeter},
 	volume    = {2022},
@@ -11,6 +27,7 @@
 	year      = {2022},
 	month     = jun
 }
+
 @misc{hidden_sector,
 	title         = {Higgs-field Portal into Hidden Sectors},
 	author        = {Brian Patt and Frank Wilczek},
@@ -70,7 +87,6 @@
 	                 figures,
 	                 submitted to Physics Reports. All figures
 	                 including auxiliary figures are
-	                 available at
-	                 
+	                 available at	                 
 	                 http://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/PAPERS/SUSY-2023-10}
 }
