data, data source

--- a/bib/main.bib
+++ b/bib/main.bib
@@ -1,3 +1,55 @@
+@article{Aliev:2010zk,
+	author        = {Aliev, M. and Lacker, H. and Langenfeld, U. and Moch, S. and Uwer, P. and Wiedermann, M.},
+	title         = {{HATHOR: HAdronic Top and Heavy quarks crOss section calculatoR}},
+	eprint        = {1007.1327},
+	archiveprefix = {arXiv},
+	primaryclass  = {hep-ph},
+	reportnumber  = {DESY-10-091, HU-EP-10-33, SFB-CPP-10-60},
+	doi           = {10.1016/j.cpc.2010.12.040},
+	journal       = {Comput. Phys. Commun.},
+	volume        = {182},
+	pages         = {1034--1046},
+	year          = {2011}
+}
+@article{Alwall:2014hca,
+	author        = {Alwall, J. and Frederix, R. and Frixione, S. and Hirschi, V. and Maltoni, F. and Mattelaer, O. and Shao, H. -S. and Stelzer, T. and Torrielli, P. and Zaro, M.},
+	title         = {{The automated computation of tree-level and next-to-leading order differential cross sections, and their matching to parton shower simulations}},
+	eprint        = {1405.0301},
+	archiveprefix = {arXiv},
+	primaryclass  = {hep-ph},
+	reportnumber  = {CERN-PH-TH-2014-064, CP3-14-18, LPN14-066, MCNET-14-09, ZU-TH-14-14},
+	doi           = {10.1007/JHEP07(2014)079},
+	journal       = {JHEP},
+	volume        = {07},
+	pages         = {079},
+	year          = {2014}
+}
+@techreport{ATL-PHYS-PUB-2016-020,
+	collaboration = {ATLAS},
+	title         = {{Studies on top-quark Monte Carlo modelling for Top2016}},
+	institution   = {CERN},
+	reportnumber  = {ATL-PHYS-PUB-2016-020},
+	address       = {Geneva},
+	year          = {2016},
+	url           = {https://cds.cern.ch/record/2216168},
+	note          = {All figures including auxiliary figures are available at
+	                 https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/PUBNOTES/ATL-PHYS-PUB-2016-020}
+}
+@article{ATLAS_data_quality,
+	author        = {Aad, Georges and others},
+	collaboration = {ATLAS},
+	title         = {{ATLAS data quality operations and performance for 2015\textendash{}2018 data-taking}},
+	eprint        = {1911.04632},
+	archiveprefix = {arXiv},
+	primaryclass  = {physics.ins-det},
+	reportnumber  = {CERN-EP-2019-207},
+	doi           = {10.1088/1748-0221/15/04/P04003},
+	journal       = {JINST},
+	volume        = {15},
+	number        = {04},
+	pages         = {P04003},
+	year          = {2020}
+}
 @article{ATLAS_detector,
 	author        = {Abbott, B. and others},
 	collaboration = {ATLAS IBL},
@@ -13,7 +65,33 @@
 	pages         = {T05008},
 	year          = {2018}
 }
-
+@article{Beneke:2011mq,
+	author        = {Beneke, M. and Falgari, P. and Klein, S. and Schwinn, C.},
+	title         = {{Hadronic top-quark pair production with NNLL threshold resummation}},
+	eprint        = {1109.1536},
+	archiveprefix = {arXiv},
+	primaryclass  = {hep-ph},
+	reportnumber  = {TTK-11-38, ITP-UU-11-26, SPIN-11-19, FR-PHENO-2011-015, SFB-CPP-11-49},
+	doi           = {10.1016/j.nuclphysb.2011.10.021},
+	journal       = {Nucl. Phys. B},
+	volume        = {855},
+	pages         = {695--741},
+	year          = {2012}
+}
+@article{Brivio:2017ije,
+	author        = {Brivio, I. and Gavela, M. B. and Merlo, L. and Mimasu, K. and No, J. M. and del Rey, R. and Sanz, V.},
+	title         = {{ALPs Effective Field Theory and Collider Signatures}},
+	eprint        = {1701.05379},
+	archiveprefix = {arXiv},
+	primaryclass  = {hep-ph},
+	reportnumber  = {IFT-UAM-CSIC-16-141, KCL-PH-TH-2016-72, FTUAM-16-49, CP3-17-04},
+	doi           = {10.1140/epjc/s10052-017-5111-3},
+	journal       = {Eur. Phys. J. C},
+	volume        = {77},
+	number        = {8},
+	pages         = {572},
+	year          = {2017}
+}
 @article{calratio,
 	title     = {Search for neutral long-lived particles in pp collisions at $\sqrt{s}$ = 13 TeV that decay into displaced hadronic jets in the ATLAS calorimeter},
 	volume    = {2022},
@@ -27,7 +105,58 @@
 	year      = {2022},
 	month     = jun
 }
-
+@article{Comix,
+	author        = {Gleisberg, Tanju and Hoeche, Stefan},
+	title         = {{Comix, a new matrix element generator}},
+	eprint        = {0808.3674},
+	archiveprefix = {arXiv},
+	primaryclass  = {hep-ph},
+	reportnumber  = {SLAC-PUB-13232, IPPP-08-31, DCPT-08-62, MCNET-08-08},
+	doi           = {10.1088/1126-6708/2008/12/039},
+	journal       = {JHEP},
+	volume        = {12},
+	pages         = {039},
+	year          = {2008}
+}
+@article{Davoudiasl:2012ag,
+	author        = {Davoudiasl, Hooman and Lee, Hye-Sung and Marciano, William J.},
+	title         = {{'Dark' Z implications for Parity Violation, Rare Meson Decays, and Higgs Physics}},
+	eprint        = {1203.2947},
+	archiveprefix = {arXiv},
+	primaryclass  = {hep-ph},
+	doi           = {10.1103/PhysRevD.85.115019},
+	journal       = {Phys. Rev. D},
+	volume        = {85},
+	pages         = {115019},
+	year          = {2012}
+}
+@article{Davoudiasl:2013aya,
+	author        = {Davoudiasl, Hooman and Lee, Hye-Sung and Lewis, Ian and Marciano, William J.},
+	title         = {{Higgs Decays as a Window into the Dark Sector}},
+	eprint        = {1304.4935},
+	archiveprefix = {arXiv},
+	primaryclass  = {hep-ph},
+	reportnumber  = {JLAB-THY-14-1844},
+	doi           = {10.1103/PhysRevD.88.015022},
+	journal       = {Phys. Rev. D},
+	volume        = {88},
+	number        = {1},
+	pages         = {015022},
+	year          = {2013}
+}
+@article{Frixione:2008yi,
+	author        = {Frixione, Stefano and Laenen, Eric and Motylinski, Patrick and Webber, Bryan R. and White, Chris D.},
+	title         = {{Single-top hadroproduction in association with a W boson}},
+	eprint        = {0805.3067},
+	archiveprefix = {arXiv},
+	primaryclass  = {hep-ph},
+	reportnumber  = {CERN-TH-2008-104, ITP-UU-08-27, NIKHEF-2008-005, ITFA-2008-16, CAVENDISH-HEP-08-06},
+	doi           = {10.1088/1126-6708/2008/07/029},
+	journal       = {JHEP},
+	volume        = {07},
+	pages         = {029},
+	year          = {2008}
+}
 @misc{hidden_sector,
 	title         = {Higgs-field Portal into Hidden Sectors},
 	author        = {Brian Patt and Frank Wilczek},
@@ -36,6 +165,86 @@
 	archiveprefix = {arXiv},
 	primaryclass  = {hep-ph},
 	url           = {https://arxiv.org/abs/hep-ph/0605188}
+}
+@article{Open_Loops,
+	author        = {Cascioli, Fabio and Maierhofer, Philipp and Pozzorini, Stefano},
+	title         = {{Scattering Amplitudes with Open Loops}},
+	eprint        = {1111.5206},
+	archiveprefix = {arXiv},
+	primaryclass  = {hep-ph},
+	reportnumber  = {ZU-TH-23-11, LPN11-66},
+	doi           = {10.1103/PhysRevLett.108.111601},
+	journal       = {Phys. Rev. Lett.},
+	volume        = {108},
+	pages         = {111601},
+	year          = {2012}
+}
+
+@article{parton_PDF,
+	author        = {Ball, Richard D. and others},
+	title         = {{Parton distributions with LHC data}},
+	journal       = {Nucl. Phys. B},
+	volume        = {867},
+	year          = {2013},
+	pages         = {244-289},
+	doi           = {10.1016/j.nuclphysb.2012.10.003},
+	eprint        = {1207.1303},
+	archiveprefix = {arXiv},
+	primaryclass  = {hep-ph},
+	reportnumber  = {EDINBURGH-2012-08, IFUM-FT-997, FR-PHENO-2012-014,
+	                 RWTH-TTK-12-25, CERN-PH-TH-2012-037, SFB-CPP-12-47},
+	slaccitation  = {%%CITATION = ARXIV:1207.1303;%%}
+}
+
+@article{parton_shower,
+	author        = {Schumann, Steffen and Krauss, Frank},
+	title         = {{A Parton shower algorithm based on Catani-Seymour dipole factorisation}},
+	eprint        = {0709.1027},
+	archiveprefix = {arXiv},
+	primaryclass  = {hep-ph},
+	reportnumber  = {DCPT-07-86, IPPP-07-43},
+	doi           = {10.1088/1126-6708/2008/03/038},
+	journal       = {JHEP},
+	volume        = {03},
+	pages         = {038},
+	year          = {2008}
+}
+
+@article{POWHEG_BOX,
+	author        = {Alioli, Simone and Nason, Paolo and Oleari, Carlo and Re, Emanuele},
+	title         = {{A general framework for implementing NLO calculations in shower Monte Carlo programs: the POWHEG BOX}},
+	eprint        = {1002.2581},
+	archiveprefix = {arXiv},
+	primaryclass  = {hep-ph},
+	reportnumber  = {DESY-10-018, SFB-CPP-10-22, IPPP-10-11, DCPT-10-22},
+	doi           = {10.1007/JHEP06(2010)043},
+	journal       = {JHEP},
+	volume        = {06},
+	pages         = {043},
+	year          = {2010}
+}
+
+@article{pythia,
+	author        = {Sj\"{o}strand, Torbjorn and Mrenna, Stephen and Skands, Peter},
+	title         = {{A brief introduction to PYTHIA 8.1}},
+	journal       = {Comput. Phys. Commun.},
+	year          = {2008},
+	volume        = {178},
+	pages         = {852-867},
+	archiveprefix = {arXiv},
+	doi           = {10.1016/j.cpc.2008.01.036},
+	eprint        = {0710.3820},
+	primaryclass  = {hep-ph},
+	reportnumber  = {CERN-LCGAPP-2007-04, LU-TP-07-28, FERMILAB-PUB-07-512-CD-T},
+	slaccitation  = {%%CITATION = ARXIV:0710.3820;%%}
+}
+
+@booklet{Pythia_tunes,
+	author       = {{ATLAS Collaboration}},
+	title        = {{ATLAS Pythia~8 tunes to \(7~\text{TeV}\) data}},
+	howpublished = {{ATL-PHYS-PUB-2014-021}},
+	url          = {https://cds.cern.ch/record/1966419},
+	year         = {2014}
 }
 
 @book{QFT_Weinberg,
@@ -55,6 +264,18 @@
 	title       = {The Quantum Theory of Fields, Volume 1: Foundations},
 	url         = {http://www.amazon.com/Quantum-Theory-Fields-Foundations/dp/0521670535%3FSubscriptionId%3D13CT5CVB80YFWJEPWS02%26tag%3Dws%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0521670535},
 	year        = 2005
+}
+
+@article{Sherpa,
+	title     = {{Event generation with Sherpa 2.2}},
+	author    = {Enrico Bothmann and Gurpreet Singh Chahal and Stefan Höche and Johannes Krause and Frank Krauss and Silvan Kuttimalai and Sebastian Liebschner and Davide Napoletano and Marek Schönherr and Holger Schulz and Steffen Schumann and Frank Siegert},
+	journal   = {SciPost Phys.},
+	volume    = {7},
+	pages     = {034},
+	year      = {2019},
+	publisher = {SciPost},
+	doi       = {10.21468/SciPostPhys.7.3.034},
+	url       = {https://scipost.org/10.21468/SciPostPhys.7.3.034}
 }
 
 @article{singlino,
@@ -89,4 +310,20 @@
 	                 including auxiliary figures are
 	                 available at	                 
 	                 http://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/PAPERS/SUSY-2023-10}
+}
+
+@article{trigger,
+	author        = {Aad, Georges and others},
+	collaboration = {ATLAS},
+	title         = {{The performance of the jet trigger for the ATLAS detector during 2011 data taking}},
+	eprint        = {1606.07759},
+	archiveprefix = {arXiv},
+	primaryclass  = {hep-ex},
+	reportnumber  = {CERN-EP-2016-031},
+	doi           = {10.1140/epjc/s10052-016-4325-0},
+	journal       = {Eur. Phys. J. C},
+	volume        = {76},
+	number        = {10},
+	pages         = {526},
+	year          = {2016}
 }
