data, data source

--- a/bib/main.bib
+++ b/bib/main.bib
@@ -24,6 +24,19 @@
 	pages         = {079},
 	year          = {2014}
 }
+@techreport{ATL-PHYS-PUB-2016-017,
+	collaboration = {ATLAS},
+	title         = {{The Pythia 8 A3 tune description of ATLAS minimum bias
+	                 and inelastic measurements incorporating the
+	                 Donnachie-Landshoff diffractive model}},
+	institution   = {CERN},
+	reportnumber  = {ATL-PHYS-PUB-2016-017},
+	address       = {Geneva},
+	year          = {2016},
+	url           = {https://cds.cern.ch/record/2206965},
+	note          = {All figures including auxiliary figures are available at
+	                 https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/PUBNOTES/ATL-PHYS-PUB-2016-017}
+}
 @techreport{ATL-PHYS-PUB-2016-020,
 	collaboration = {ATLAS},
 	title         = {{Studies on top-quark Monte Carlo modelling for Top2016}},
@@ -156,6 +169,17 @@
 	volume        = {07},
 	pages         = {029},
 	year          = {2008}
+}
+@article{GEANT4:2002zbu,
+	author        = {Agostinelli, S. and others},
+	collaboration = {GEANT4},
+	title         = {{GEANT4 - A Simulation Toolkit}},
+	reportnumber  = {SLAC-PUB-9350, FERMILAB-PUB-03-339, CERN-IT-2002-003},
+	doi           = {10.1016/S0168-9002(03)01368-8},
+	journal       = {Nucl. Instrum. Meth. A},
+	volume        = {506},
+	pages         = {250--303},
+	year          = {2003}
 }
 @misc{hidden_sector,
 	title         = {Higgs-field Portal into Hidden Sectors},
