--- a/ustcsetup.tex
+++ b/ustcsetup.tex
@@ -1,28 +1,28 @@
 % !TeX root = ./main.tex
 
 \ustcsetup{
-  title                = {基于量能器信息寻找 \\ 长寿命粒子的神经元网络},
-  title*               = {Application of Neural network technique in searches for
-      Long-lived particles with signatures in calorimeter},
-  author               = {叶飞瑞},
-  author*              = {Feirui Ye},
-  speciality           = {粒子物理与原子核物理},
-  speciality*          = {Particle Physics and Nuclear Physics},
-  supervisor           = {刘衍文~教授},
-  supervisor*          = {Prof. Yanwen Liu},
-  % practice-supervisor  = {XXX~教授, XXX~教授},  % 专业/工程学位的实践导师
-  % practice-supervisor* = {Prof. XXX, Prof. XXX},
-  % date                 = {2017-05-01},  % 完成时间，默认为今日
-  department           = {物理学院},  % 院系，本科生需要填写
-  student-id           = {PB21020514},  % 学号，本科生需要填写
-  % secret-level         = {秘密},     % 绝密|机密|秘密|控阅，注释本行则公开
-  % secret-level*        = {Secret},  % Top secret | Highly secret | Secret
-  % secret-year          = {10},      % 保密/控阅期限
-  % reviewer             = true,      % 声明页显示“评审专家签名”
-  %
-  % 数学字体
-  % math-style           = GB,  % 可选：GB, TeX, ISO
-  math-font            = xits,  % 可选：stix, xits, libertinus
+    title                = {基于量能器信息寻找 \\ 长寿命粒子的神经元网络},
+    title*               = {Application of Neural network technique in searches for
+            Long-lived particles with signatures in calorimeter},
+    author               = {叶飞瑞},
+    author*              = {Feirui Ye},
+    speciality           = {粒子物理与原子核物理},
+    speciality*          = {Particle Physics and Nuclear Physics},
+    supervisor           = {刘衍文~教授},
+    supervisor*          = {Prof. Yanwen Liu},
+    % practice-supervisor  = {XXX~教授, XXX~教授},  % 专业/工程学位的实践导师
+    % practice-supervisor* = {Prof. XXX, Prof. XXX},
+    % date                 = {2017-05-01},  % 完成时间，默认为今日
+    department           = {物理学院},  % 院系，本科生需要填写
+    student-id           = {PB21020514},  % 学号，本科生需要填写
+    % secret-level         = {秘密},     % 绝密|机密|秘密|控阅，注释本行则公开
+    % secret-level*        = {Secret},  % Top secret | Highly secret | Secret
+    % secret-year          = {10},      % 保密/控阅期限
+    % reviewer             = true,      % 声明页显示“评审专家签名”
+    %
+    % 数学字体
+    % math-style           = GB,  % 可选：GB, TeX, ISO
+    math-font            = xits,  % 可选：stix, xits, libertinus
 }
 
 
@@ -57,6 +57,7 @@
 \usepackage{makecell}
 \usepackage{tabularx}
 \usepackage{atlasmisc}
+\usepackage{subfig}
 
 % 参考文献使用 BibTeX + natbib 宏包
 % 顺序编码制
