data, process, BDT

--- a/bib/main.bib
+++ b/bib/main.bib
@@ -78,6 +78,19 @@
 	pages         = {T05008},
 	year          = {2018}
 }
+@techreport{ATLAS-CONF-2016-103,
+	collaboration = {ATLAS},
+	title         = {{Search for long-lived neutral particles decaying in the
+	                 hadronic calorimeter of ATLAS at $\sqrt{s} =
+	                 13~\mathrm{TeV}$ in $3.2~\mathrm{fb^{-1}}$ of data}},
+	institution   = {CERN},
+	reportnumber  = {ATLAS-CONF-2016-103},
+	address       = {Geneva},
+	year          = {2016},
+	url           = {https://cds.cern.ch/record/2219571},
+	note          = {All figures including auxiliary figures are available at
+	                 https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/CONFNOTES/ATLAS-CONF-2016-103}
+}
 @article{Beneke:2011mq,
 	author        = {Beneke, M. and Falgari, P. and Klein, S. and Schwinn, C.},
 	title         = {{Hadronic top-quark pair production with NNLL threshold resummation}},
