--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 % !TeX program = xelatex
 % !TeX spellcheck = en_US
 
-\documentclass[degree=bachelor]{ustcthesis}
+\documentclass[degree=bachelor, section-style=arabic]{ustcthesis}
 % degree      = doctor | master | bachelor
 % degree-type = academic | professional | engineering
 % language    = chinese | english
