--- a/bib/main.bib
+++ b/bib/main.bib
@@ -25,6 +25,7 @@
 	year          = {2014}
 }
 @techreport{ATL-PHYS-PUB-2016-017,
+	author        = {{ATLAS Collaboration}},
 	collaboration = {ATLAS},
 	title         = {{The Pythia 8 A3 tune description of ATLAS minimum bias
 	                 and inelastic measurements incorporating the
@@ -38,6 +39,7 @@
 	                 https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/PUBNOTES/ATL-PHYS-PUB-2016-017}
 }
 @techreport{ATL-PHYS-PUB-2016-020,
+	author        = {{ATLAS Collaboration}},
 	collaboration = {ATLAS},
 	title         = {{Studies on top-quark Monte Carlo modelling for Top2016}},
 	institution   = {CERN},
@@ -79,6 +81,7 @@
 	year          = {2018}
 }
 @techreport{ATLAS-CONF-2016-103,
+	author        = {{ATLAS Collaboration}},
 	collaboration = {ATLAS},
 	title         = {{Search for long-lived neutral particles decaying in the
 	                 hadronic calorimeter of ATLAS at $\sqrt{s} =
