--- a/bib/main.bib
+++ b/bib/main.bib
@@ -1,3 +1,12 @@
+@misc{akiba2019optunanextgenerationhyperparameteroptimization,
+	title         = {Optuna: A Next-generation Hyperparameter Optimization Framework},
+	author        = {Takuya Akiba and Shotaro Sano and Toshihiko Yanase and Takeru Ohta and Masanori Koyama},
+	year          = {2019},
+	eprint        = {1907.10902},
+	archiveprefix = {arXiv},
+	primaryclass  = {cs.LG},
+	url           = {https://arxiv.org/abs/1907.10902}
+}
 @article{Aliev:2010zk,
 	author        = {Aliev, M. and Lacker, H. and Langenfeld, U. and Moch, S. and Uwer, P. and Wiedermann, M.},
 	title         = {{HATHOR: HAdronic Top and Heavy quarks crOss section calculatoR}},
@@ -219,7 +228,6 @@
 	pages         = {111601},
 	year          = {2012}
 }
-
 @article{parton_PDF,
 	author        = {Ball, Richard D. and others},
 	title         = {{Parton distributions with LHC data}},
@@ -235,7 +243,6 @@
 	                 RWTH-TTK-12-25, CERN-PH-TH-2012-037, SFB-CPP-12-47},
 	slaccitation  = {%%CITATION = ARXIV:1207.1303;%%}
 }
-
 @article{parton_shower,
 	author        = {Schumann, Steffen and Krauss, Frank},
 	title         = {{A Parton shower algorithm based on Catani-Seymour dipole factorisation}},
@@ -248,6 +255,16 @@
 	volume        = {03},
 	pages         = {038},
 	year          = {2008}
+}
+
+@misc{paszke2019pytorchimperativestylehighperformance,
+	title         = {PyTorch: An Imperative Style, High-Performance Deep Learning Library},
+	author        = {Adam Paszke and Sam Gross and Francisco Massa and Adam Lerer and James Bradbury and Gregory Chanan and Trevor Killeen and Zeming Lin and Natalia Gimelshein and Luca Antiga and Alban Desmaison and Andreas Köpf and Edward Yang and Zach DeVito and Martin Raison and Alykhan Tejani and Sasank Chilamkurthy and Benoit Steiner and Lu Fang and Junjie Bai and Soumith Chintala},
+	year          = {2019},
+	eprint        = {1912.01703},
+	archiveprefix = {arXiv},
+	primaryclass  = {cs.LG},
+	url           = {https://arxiv.org/abs/1912.01703}
 }
 
 @article{POWHEG_BOX,
@@ -366,4 +383,14 @@
 	number        = {10},
 	pages         = {526},
 	year          = {2016}
+}
+
+@misc{vaswani2023attentionneed,
+	title         = {Attention Is All You Need},
+	author        = {Ashish Vaswani and Noam Shazeer and Niki Parmar and Jakob Uszkoreit and Llion Jones and Aidan N. Gomez and Lukasz Kaiser and Illia Polosukhin},
+	year          = {2023},
+	eprint        = {1706.03762},
+	archiveprefix = {arXiv},
+	primaryclass  = {cs.CL},
+	url           = {https://arxiv.org/abs/1706.03762}
 }
