--- a/ustcsetup.tex
+++ b/ustcsetup.tex
@@ -56,8 +56,10 @@
 \usepackage{physics}
 \usepackage{makecell}
 \usepackage{tabularx}
-\usepackage{atlasmisc}
 \usepackage{subfig}
+
+\usepackage{atlasmisc}
+\usepackage{atlasunit}
 
 % 参考文献使用 BibTeX + natbib 宏包
 % 顺序编码制
