add atlasphysics pacakage

--- a/bib/main.bib
+++ b/bib/main.bib
@@ -116,6 +116,15 @@
 	pages         = {695--741},
 	year          = {2012}
 }
+@article{Boccardi:1411357,
+	author = {Boccardi, A and Bravin, E and Jeff, A and Roncarolo, F and
+	          Höfle, W and Valuch, D and Kain, V and Goddard, B and
+	          Meddahi, M and Uythoven, J and Gianfelice-Wendt, E},
+	title  = {{Abort Gap Cleaning tests performed on 13 October 2011
+	          during luminosity operation}},
+	year   = {2012},
+	url    = {https://cds.cern.ch/record/1411357}
+}
 @article{Brivio:2017ije,
 	author        = {Brivio, I. and Gavela, M. B. and Merlo, L. and Mimasu, K. and No, J. M. and del Rey, R. and Sanz, V.},
 	title         = {{ALPs Effective Field Theory and Collider Signatures}},
