--- a/ustcsetup.tex
+++ b/ustcsetup.tex
@@ -58,8 +58,7 @@
 \usepackage{tabularx}
 \usepackage{subfig}
 
-\usepackage{atlasmisc}
-\usepackage{atlasunit}
+\usepackage{atlasphysics}
 
 % 参考文献使用 BibTeX + natbib 宏包
 % 顺序编码制
