--- a/bib/main.bib
+++ b/bib/main.bib
@@ -59,6 +59,18 @@
 	note          = {All figures including auxiliary figures are available at
 	                 https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/PUBNOTES/ATL-PHYS-PUB-2016-020}
 }
+@techreport{ATL-PHYS-PUB-2022-027,
+	collaboration = {ATLAS},
+	title         = {{Graph Neural Network Jet Flavour Tagging with the ATLAS
+	                 Detector}},
+	institution   = {CERN},
+	reportnumber  = {ATL-PHYS-PUB-2022-027},
+	address       = {Geneva},
+	year          = {2022},
+	url           = {https://cds.cern.ch/record/2811135},
+	note          = {All figures including auxiliary figures are available at
+	                 https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/PUBNOTES/ATL-PHYS-PUB-2022-027}
+}
 @article{ATLAS_data_quality,
 	author        = {Aad, Georges and others},
 	collaboration = {ATLAS},
@@ -102,6 +114,20 @@
 	url           = {https://cds.cern.ch/record/2219571},
 	note          = {All figures including auxiliary figures are available at
 	                 https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/CONFNOTES/ATLAS-CONF-2016-103}
+}
+@article{ATLAS:2022zhj,
+	author        = {Aad, Georges and others},
+	collaboration = {ATLAS},
+	title         = {{Search for neutral long-lived particles in $pp$ collisions at $ \sqrt{s} $ = 13 TeV that decay into displaced hadronic jets in the ATLAS calorimeter}},
+	eprint        = {2203.01009},
+	archiveprefix = {arXiv},
+	primaryclass  = {hep-ex},
+	reportnumber  = {CERN-EP-2022-002},
+	doi           = {10.1007/JHEP06(2022)005},
+	journal       = {JHEP},
+	volume        = {06},
+	pages         = {005},
+	year          = {2022}
 }
 @article{Beneke:2011mq,
 	author        = {Beneke, M. and Falgari, P. and Klein, S. and Schwinn, C.},
