--- a/bib/main.bib
+++ b/bib/main.bib
@@ -60,6 +60,7 @@
 	                 https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/PUBNOTES/ATL-PHYS-PUB-2016-020}
 }
 @techreport{ATL-PHYS-PUB-2022-027,
+	author        = {{ATLAS Collaboration}},
 	collaboration = {ATLAS},
 	title         = {{Graph Neural Network Jet Flavour Tagging with the ATLAS
 	                 Detector}},
@@ -250,6 +251,13 @@
 	primaryclass  = {hep-ph},
 	url           = {https://arxiv.org/abs/hep-ph/0605188}
 }
+@article{mediumMultiHead2024,
+	title   = {Multi-Head Attention — Formally Explained and Defined},
+	author  = {Author, Medium Contributor},
+	journal = {Medium},
+	year    = {2024},
+	url     = {https://medium.com/data-science/multi-head-attention-formally-explained-and-defined-89dc70ce84bd}
+}
 @article{Open_Loops,
 	author        = {Cascioli, Fabio and Maierhofer, Philipp and Pozzorini, Stefano},
 	title         = {{Scattering Amplitudes with Open Loops}},
@@ -291,7 +299,6 @@
 	pages         = {038},
 	year          = {2008}
 }
-
 @misc{paszke2019pytorchimperativestylehighperformance,
 	title         = {PyTorch: An Imperative Style, High-Performance Deep Learning Library},
 	author        = {Adam Paszke and Sam Gross and Francisco Massa and Adam Lerer and James Bradbury and Gregory Chanan and Trevor Killeen and Zeming Lin and Natalia Gimelshein and Luca Antiga and Alban Desmaison and Andreas Köpf and Edward Yang and Zach DeVito and Martin Raison and Alykhan Tejani and Sasank Chilamkurthy and Benoit Steiner and Lu Fang and Junjie Bai and Soumith Chintala},
@@ -301,7 +308,6 @@
 	primaryclass  = {cs.LG},
 	url           = {https://arxiv.org/abs/1912.01703}
 }
-
 @article{POWHEG_BOX,
 	author        = {Alioli, Simone and Nason, Paolo and Oleari, Carlo and Re, Emanuele},
 	title         = {{A general framework for implementing NLO calculations in shower Monte Carlo programs: the POWHEG BOX}},
@@ -315,7 +321,6 @@
 	pages         = {043},
 	year          = {2010}
 }
-
 @article{pythia,
 	author        = {Sj\"{o}strand, Torbjorn and Mrenna, Stephen and Skands, Peter},
 	title         = {{A brief introduction to PYTHIA 8.1}},
@@ -330,7 +335,6 @@
 	reportnumber  = {CERN-LCGAPP-2007-04, LU-TP-07-28, FERMILAB-PUB-07-512-CD-T},
 	slaccitation  = {%%CITATION = ARXIV:0710.3820;%%}
 }
-
 @booklet{Pythia_tunes,
 	author       = {{ATLAS Collaboration}},
 	title        = {{ATLAS Pythia~8 tunes to \(7~\text{TeV}\) data}},
@@ -338,7 +342,6 @@
 	url          = {https://cds.cern.ch/record/1966419},
 	year         = {2014}
 }
-
 @book{QFT_Weinberg,
 	added-at    = {2009-06-11T11:33:08.000+0200},
 	asin        = {0521670535},
@@ -357,7 +360,6 @@
 	url         = {http://www.amazon.com/Quantum-Theory-Fields-Foundations/dp/0521670535%3FSubscriptionId%3D13CT5CVB80YFWJEPWS02%26tag%3Dws%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0521670535},
 	year        = 2005
 }
-
 @article{Sherpa,
 	title     = {{Event generation with Sherpa 2.2}},
 	author    = {Enrico Bothmann and Gurpreet Singh Chahal and Stefan Höche and Johannes Krause and Frank Krauss and Silvan Kuttimalai and Sebastian Liebschner and Davide Napoletano and Marek Schönherr and Holger Schulz and Steffen Schumann and Frank Siegert},
@@ -369,7 +371,6 @@
 	doi       = {10.21468/SciPostPhys.7.3.034},
 	url       = {https://scipost.org/10.21468/SciPostPhys.7.3.034}
 }
-
 @article{singlino,
 	title     = {The higgsino–singlino sector of the NMSSM: combined constraints from dark matter and the LHC},
 	volume    = {78},
@@ -383,7 +384,6 @@
 	year      = {2018},
 	month     = sep
 }
-
 @techreport{SUSY_ATLAS,
 	author        = {{ATLAS collaboration}},
 	collaboration = {ATLAS},
@@ -403,7 +403,6 @@
 	                 available at	                 
 	                 http://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/PAPERS/SUSY-2023-10}
 }
-
 @article{trigger,
 	author        = {Aad, Georges and others},
 	collaboration = {ATLAS},
@@ -419,7 +418,18 @@
 	pages         = {526},
 	year          = {2016}
 }
-
+@misc{uvadlc2025,
+	title        = {Tutorial 6: Transformers and Multi-Head Attention},
+	author       = {UVADLC},
+	year         = {2025},
+	howpublished = {\url{https://uvadlc-notebooks.readthedocs.io/}}
+}
+@inproceedings{vaswani2017attention,
+	title     = {Attention is all you need},
+	author    = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and \dots},
+	booktitle = {NeurIPS},
+	year      = {2017}
+}
 @misc{vaswani2023attentionneed,
 	title         = {Attention Is All You Need},
 	author        = {Ashish Vaswani and Noam Shazeer and Niki Parmar and Jakob Uszkoreit and Llion Jones and Aidan N. Gomez and Lukasz Kaiser and Illia Polosukhin},
