abstract & intro & result

--- a/bib/main.bib
+++ b/bib/main.bib
@@ -1,3 +1,13 @@
+@article{aad2012observation,
+	title     = {Observation of a new particle in the search for the Standard Model Higgs boson with the ATLAS detector at the LHC},
+	author    = {Aad, Georges and Abajyan, Tatevik and Abbott, Brad and Abdallah, Jalal and Khalek, S Abdel and Abdelalim, Ahmed Ali and Aben, R and Abi, B and Abolins, M and AbouZeid, OS and others},
+	journal   = {Physics Letters B},
+	volume    = {716},
+	number    = {1},
+	pages     = {1--29},
+	year      = {2012},
+	publisher = {Elsevier}
+}
 @misc{akiba2019optunanextgenerationhyperparameteroptimization,
 	title         = {Optuna: A Next-generation Hyperparameter Optimization Framework},
 	author        = {Takuya Akiba and Shotaro Sano and Toshihiko Yanase and Takeru Ohta and Masanori Koyama},
