--- a/ustcsetup.tex
+++ b/ustcsetup.tex
@@ -62,16 +62,16 @@
 
 % 参考文献使用 BibTeX + natbib 宏包
 % 顺序编码制
-\usepackage[sort]{natbib}
-\bibliographystyle{ustcthesis-numerical}
+% \usepackage[sort]{natbib}
+% \bibliographystyle{ustcthesis-numerical}
 
 % 著者-出版年制
 % \usepackage{natbib}
 % \bibliographystyle{ustcthesis-authoryear}
 
 % 本科生参考文献的著录格式
-% \usepackage[sort]{natbib}
-% \bibliographystyle{ustcthesis-bachelor}
+\usepackage[sort]{natbib}
+\bibliographystyle{ustcthesis-bachelor}
 
 % 参考文献使用 BibLaTeX 宏包
 % \usepackage[style=ustcthesis-numeric]{biblatex}
