--- a/bib/main.bib
+++ b/bib/main.bib
@@ -112,6 +112,18 @@
 	pages         = {T05008},
 	year          = {2018}
 }
+@techreport{ATLAS-CONF-2015-029,
+	title        = {{Selection of jets produced in 13TeV proton-proton
+	                collisions with the ATLAS detector}},
+	author       = {{ATLAS Collaboration}},
+	institution  = {CERN},
+	reportnumber = {ATLAS-CONF-2015-029},
+	address      = {Geneva},
+	year         = {2015},
+	url          = {https://cds.cern.ch/record/2037702},
+	note         = {All figures including auxiliary figures are available at
+	                https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/CONFNOTES/ATLAS-CONF-2015-029}
+}
 @techreport{ATLAS-CONF-2016-103,
 	author        = {{ATLAS Collaboration}},
 	collaboration = {ATLAS},
@@ -433,6 +445,11 @@
 	author       = {UVADLC},
 	year         = {2025},
 	howpublished = {\url{https://uvadlc-notebooks.readthedocs.io/}}
+}@misc{CPgroup,
+	title        = {Tracking CP Pre-Recommendations for 2017 Winter Conferences},
+	author       = {ShihChiehHsu},
+	year         = {2017},
+	howpublished = {\url{ https://twiki.cern.ch/twiki/bin/viewauth/AtlasProtected/TrackingCPMoriond2017#Track_to_Vertex_Association}}
 }
 @inproceedings{vaswani2017attention,
 	title     = {Attention is all you need},
