--- a/bib/main.bib
+++ b/bib/main.bib
@@ -214,6 +214,25 @@
 	pages         = {039},
 	year          = {2008}
 }
+@misc{CPgroup,
+	title        = {Tracking CP Pre-Recommendations for 2017 Winter Conferences},
+	author       = {ShihChiehHsu},
+	year         = {2017},
+	howpublished = {\url{ https://twiki.cern.ch/twiki/bin/viewauth/AtlasProtected/TrackingCPMoriond2017#Track_to_Vertex_Association}}
+}
+@article{Cui_2015,
+	title     = {Probing baryogenesis with displaced vertices at the LHC},
+	volume    = {2015},
+	issn      = {1029-8479},
+	url       = {http://dx.doi.org/10.1007/JHEP02(2015)049},
+	doi       = {10.1007/jhep02(2015)049},
+	number    = {2},
+	journal   = {Journal of High Energy Physics},
+	publisher = {Springer Science and Business Media LLC},
+	author    = {Cui, Yanou and Shuve, Brian},
+	year      = {2015},
+	month     = feb
+}
 @article{Davoudiasl:2012ag,
 	author        = {Davoudiasl, Hooman and Lee, Hye-Sung and Marciano, William J.},
 	title         = {{'Dark' Z implications for Parity Violation, Rare Meson Decays, and Higgs Physics}},
@@ -239,6 +258,19 @@
 	number        = {1},
 	pages         = {015022},
 	year          = {2013}
+}
+@article{Fong_2013,
+	title     = {New ways to TeV scale leptogenesis},
+	volume    = {2013},
+	issn      = {1029-8479},
+	url       = {http://dx.doi.org/10.1007/JHEP08(2013)104},
+	doi       = {10.1007/jhep08(2013)104},
+	number    = {8},
+	journal   = {Journal of High Energy Physics},
+	publisher = {Springer Science and Business Media LLC},
+	author    = {Fong, Chee Sheng and Gonzalez-Garcia, M. C. and Nardi, Enrico and Peinado, Eduardo},
+	year      = {2013},
+	month     = aug
 }
 @article{Frixione:2008yi,
 	author        = {Frixione, Stefano and Laenen, Eric and Motylinski, Patrick and Webber, Bryan R. and White, Chris D.},
@@ -439,17 +471,11 @@
 	number        = {10},
 	pages         = {526},
 	year          = {2016}
-}
-@misc{uvadlc2025,
+}@misc{uvadlc2025,
 	title        = {Tutorial 6: Transformers and Multi-Head Attention},
 	author       = {UVADLC},
 	year         = {2025},
 	howpublished = {\url{https://uvadlc-notebooks.readthedocs.io/}}
-}@misc{CPgroup,
-	title        = {Tracking CP Pre-Recommendations for 2017 Winter Conferences},
-	author       = {ShihChiehHsu},
-	year         = {2017},
-	howpublished = {\url{ https://twiki.cern.ch/twiki/bin/viewauth/AtlasProtected/TrackingCPMoriond2017#Track_to_Vertex_Association}}
 }
 @inproceedings{vaswani2017attention,
 	title     = {Attention is all you need},
