review from authorship

--- a/bib/main.bib
+++ b/bib/main.bib
@@ -174,6 +174,20 @@
 	year   = {2012},
 	url    = {https://cds.cern.ch/record/1411357}
 }
+@article{BRISCOE20112,
+	title    = {Conceptual complexity and the bias/variance tradeoff},
+	journal  = {Cognition},
+	volume   = {118},
+	number   = {1},
+	pages    = {2-16},
+	year     = {2011},
+	issn     = {0010-0277},
+	doi      = {https://doi.org/10.1016/j.cognition.2010.10.004},
+	url      = {https://www.sciencedirect.com/science/article/pii/S0010027710002295},
+	author   = {Erica Briscoe and Jacob Feldman},
+	keywords = {Concept learning, Complexity, Bias/variance},
+	abstract = {In this paper we propose that the conventional dichotomy between exemplar-based and prototype-based models of concept learning is helpfully viewed as an instance of what is known in the statistical learning literature as the bias/variance tradeoff. The bias/variance tradeoff can be thought of as a sliding scale that modulates how closely any learning procedure adheres to its training data. At one end of the scale (high variance), models can entertain very complex hypotheses, allowing them to fit a wide variety of data very closely—but as a result can generalize poorly, a phenomenon called overfitting. At the other end of the scale (high bias), models make relatively simple and inflexible assumptions, and as a result may fit the data poorly, called underfitting. Exemplar and prototype models of category formation are at opposite ends of this scale: prototype models are highly biased, in that they assume a simple, standard conceptual form (the prototype), while exemplar models have very little bias but high variance, allowing them to fit virtually any combination of training data. We investigated human learners’ position on this spectrum by confronting them with category structures at variable levels of intrinsic complexity, ranging from simple prototype-like categories to much more complex multimodal ones. The results show that human learners adopt an intermediate point on the bias/variance continuum, inconsistent with either of the poles occupied by most conventional approaches. We present a simple model that adjusts (regularizes) the complexity of its hypotheses in order to suit the training data, which fits the experimental data better than representative exemplar and prototype models.}
+}
 @article{Brivio:2017ije,
 	author        = {Brivio, I. and Gavela, M. B. and Merlo, L. and Mimasu, K. and No, J. M. and del Rey, R. and Sanz, V.},
 	title         = {{ALPs Effective Field Theory and Collider Signatures}},
